--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4">
-      <img src="images/me.JPG" class="rounded-circle"  alt="Me" >
+      <img src="images/me.png" class="rounded-circle"  alt="Me" >
     </div>
     <div class="col-md-8">
       <div class="jumbotron">
