--- a/courses.html
+++ b/courses.html
@@ -38,7 +38,7 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.Png" alt="" class="logo">
+          <img src="images/logof.png" alt="" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
