--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse w-100 order-1 order-lg-0" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item active" >
                 <a class="nav-link" href="index.html">About me</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="courses.html">Courses</a>
             </li>
             <li class="nav-item ">
+                <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </li>              
+            <li class="nav-item ">
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
+
 
         </ul>
     </div>
@@ -38,7 +42,7 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.png" alt="" class="logo">
+          <img src="images/logof.Png" alt="" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
@@ -47,8 +51,8 @@
 <br></br>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-4">
-      <img src="images/me.png" class="rounded-circle"  alt="Me" >
+    <div class="col-md-4" >
+      <img src="images/me.JPG" class="rounded-circle"  alt="Me" >
     </div>
     <div class="col-md-8">
       <div class="jumbotron">
@@ -87,7 +91,7 @@ More detailed information of the university, faculty, and bachelor degree below.
               <h5 class="card-title" >
                 The University
               </h5>
-              <p class="card-text">
+              <p class="text-justify">
                 The National University of Colombia is a public and national research university in Colombia, with general campuses in Bogotá, Medellín, Manizales and Palmira.
                  It was established in 1867 by an act of the Congress of Colombia.
                   The University is part of what is known as the Golden Triangle of higher education in Colombia, being among the most selective and competitive universities in the country.
@@ -100,14 +104,14 @@ More detailed information of the university, faculty, and bachelor degree below.
           </div>
         </div>
         <div class="col-md-4">
-          <div  class="card text-center">
-            <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="images/fac.png">
+          <div  class="card text-center" >
+            <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="images/fac.png" >
             <div class="card-block">
               <h5 class="card-title" >
                 The Faculty
 
               </h5>
-              <p class="card-text">
+              <p class="text-justify">
                 
 The Faculty of Mines is an institution that is mainly taught in engineering education in twelve of its branches, standing out for being the faculty with the highest amount of undergraduate engineering programs in Colombia, in addition to being considered the most prestigious in the country.
               </p>
@@ -124,7 +128,7 @@ The Faculty of Mines is an institution that is mainly taught in engineering educ
               <h5 class="card-title">
                 The Bachelor Degree
               </h5>
-              <p class="card-text">
+              <p class="text-justify">
                 The curricular program of Systems Engineering and Informatics aims to train complete and qualified professionals who can adopt, apply and innovate knowledge in the field of systems and informatics. Computer science is applied in several and diverse sectors, and nowadays, computers are present in almost all daily tasks.
               </p>
               <p>
