--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,13 @@
             <li class="nav-item ">
                 <a class="nav-link" href="courses.html">Courses</a>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </li>               
             <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
+
 
         </ul>
     </div>
@@ -38,7 +42,7 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.png" alt="" class="logo">
+          <img src="images/logof.Png" alt="" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
