--- a/courses.html
+++ b/courses.html
@@ -25,9 +25,13 @@
             <li class="nav-item active">
                 <a class="nav-link" href="courses.html">Courses</a>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </li>                           
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
+
 
         </ul>
     </div>
@@ -38,7 +42,7 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.png" alt="" class="logo">
+          <img src="images/logof.Png" alt="" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
@@ -171,7 +175,7 @@ Basics of Excel           </td>
     </div>
     <div class="col-md-6">
       <h3 class="text-center">
-        Certificates.
+        Certificates
       </h3>
       <div  class="carousel slide" data-ride="carousel" id="carousel-288193">
 <ul class="carousel-indicators">
@@ -184,43 +188,43 @@ Basics of Excel           </td>
         </ul>
         <div class="carousel-inner" >
           <div class="carousel-item active" >
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap First" src="images/inthtml.png" />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap First" src="images/inthtml.jPg" />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size"class="d-block w-100" alt="Carousel Bootstrap Second" src="images/intcss.png"  />
+            <img class="size"class="d-block w-100" alt="Carousel Bootstrap Second" src="images/intcss.jPg"  />
             <div class="carousel-caption">
    
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/interac.png"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/interac.jPg"  />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/adv.png"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/adv.jPg"  />
             <div class="carousel-caption">
 
             </div>
           </div>          
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/ia.png"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/ia.jPg"  />
             <div class="carousel-caption">
 
             </div>
           </div> 
                              <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/georgia.png"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/georgia.jPg"  />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/excel.png"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/excel.jPg"  />
             <div class="carousel-caption">
 
             </div>
