--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.Png" alt="" class="logo">
+          <img src="images/logof.png" alt="" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
@@ -52,7 +52,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4" >
-      <img src="images/me.JPG" class="rounded-circle"  alt="Me" >
+      <img src="images/me.png" class="rounded-circle"  alt="Me" >
     </div>
     <div class="col-md-8">
       <div class="jumbotron">
