--- a/courses.html
+++ b/courses.html
@@ -188,43 +188,43 @@ Basics of Excel           </td>
         </ul>
         <div class="carousel-inner" >
           <div class="carousel-item active" >
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap First" src="images/inthtml.jPg" />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap First" src="images/inthtml.png" />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size"class="d-block w-100" alt="Carousel Bootstrap Second" src="images/intcss.jPg"  />
+            <img class="size"class="d-block w-100" alt="Carousel Bootstrap Second" src="images/intcss.png"  />
             <div class="carousel-caption">
    
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/interac.jPg"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/interac.png"  />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/adv.jPg"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/adv.png"  />
             <div class="carousel-caption">
 
             </div>
           </div>          
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/ia.jPg"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/ia.png"  />
             <div class="carousel-caption">
 
             </div>
           </div> 
                              <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/georgia.jPg"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/georgia.png"  />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/excel.jPg"  />
+            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/excel.png"  />
             <div class="carousel-caption">
 
             </div>
