--- a/contact.html
+++ b/contact.html
@@ -63,14 +63,14 @@
     </div>
     <div class="col-md-4" >
       <i class="far fa-address-card" id="contacto"></i>
-      <br></br>
+      
       <address class="text-center">
          <strong>Yinier Ramirez</strong><br /> yiaramirezba@unal.edu.co <br />  Cra. 65 #59a-110, Medellín, Antioquia, Col. <br /> <abbr title="Phone">P:</abbr> +57 (4) 4309000
       </address>
 
     </div>
     <div class="col-md-4">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.017187374834!2d-75.5793955859838!3d6.261465895467852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428e678fd90af%3A0x483eb5aade56b0b!2sUniversidad%20Nacional%20de%20Colombia%20Sede%20Medell%C3%ADn!5e0!3m2!1ses!2sco!4v1591149804039!5m2!1ses!2sco" width="433" height="444" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>    </div>
+      <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.017187374834!2d-75.5793955859838!3d6.261465895467852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428e678fd90af%3A0x483eb5aade56b0b!2sUniversidad%20Nacional%20de%20Colombia%20Sede%20Medell%C3%ADn!5e0!3m2!1ses!2sco!4v1591149804039!5m2!1ses!2sco" width="433" height="433"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" ></iframe>    </div>
     <div class="col-md-2">
     </div>
   </div>
@@ -79,7 +79,7 @@
       <ul class="list-inline dev-icons" >
         
          <li class="list-inline-item">
-          <a href="https://www.facebook.com/YinierRamirez/" target="_blank">
+          <a href="https://www.facebook.m/YinierRamirez/" target="_blank">
            <i class="fab fa-facebook" ></i>
            </a>
          </li>
