--- a/courses.html
+++ b/courses.html
@@ -58,7 +58,7 @@
         The educational curriculum of the university is very varied and we have classes in mathematics, statistics, programming, research, engineering projects, AI, etc.
         </p>
       <p>
-        <a class="colorlink" id="link" target="_blank" class="btn" href="https://minas.medellin.unal.edu.co/descargas/MallaCurricularIngenieriadeSistemaseInf2019.pdf" id="link">View details of the Curriculum  »</a>
+        <a class="colorlink"  target="_blank"  href="https://minas.medellin.unal.edu.co/descargas/MallaCurricularIngenieriadeSistemaseInf2019.pdf" id="link">View details of the Curriculum  »</a>
 
       </p>
       <p>
@@ -133,9 +133,7 @@ Advanced Styling with Responsive Design             </td>
               Coursera/University of Michigan
             </td>
 
-          </tr>
-          
-</tr>
+
           <tr class="table-success">
             <td>
               5
@@ -146,8 +144,7 @@ AI For Everyone             </td>
               Coursera/DeepLearning
             </td>
 
-          </tr>
-</tr>
+
           <tr class="table-success">
             <td>
               6
@@ -188,43 +185,43 @@ Basics of Excel           </td>
         </ul>
         <div class="carousel-inner" >
           <div class="carousel-item active" >
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap First" src="images/inthtml.png" />
+            <img class="size "  alt="HTML Certificate" src="images/inthtml.png" />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size"class="d-block w-100" alt="Carousel Bootstrap Second" src="images/intcss.png"  />
+            <img class="size" alt="CSS Certificate" src="images/intcss.png"  />
             <div class="carousel-caption">
    
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/interac.png"  />
+            <img class="size" alt="Interactivity Certificate" src="images/interac.png"  />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/adv.png"  />
+            <img class="size "  alt="Advanced Certificate" src="images/adv.png"  />
             <div class="carousel-caption">
 
             </div>
           </div>          
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/ia.png"  />
+            <img class="size " alt="IA Certificate" src="images/ia.png"  />
             <div class="carousel-caption">
 
             </div>
           </div> 
                              <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/georgia.png"  />
+            <img class="size " alt="English Certificate" src="images/georgia.png"  />
             <div class="carousel-caption">
 
             </div>
           </div>
           <div class="carousel-item">
-            <img class="size" class="d-block w-100" alt="Carousel Bootstrap Third" src="images/excel.png"  />
+            <img class="size "  alt="Excel Certificate" src="images/excel.png"  />
             <div class="carousel-caption">
 
             </div>
@@ -235,37 +232,37 @@ Basics of Excel           </td>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <br> </br>
+      
     <h3 class="text-center">Programming skills.</h3>
        <ul class="list-inline dev-icons" >
          <li class="list-inline-item">
-           <i class="fab fa-java" id="color"></i>
+           <i class="fab fa-java color" ></i>
          </li>
          <li class="list-inline-item">
-           <i class="fab fa-css3-alt" id="color"></i>
+           <i class="fab fa-css3-alt color" ></i>
          </li>
          <li class="list-inline-item">
-           <i class="fab fa-python" id="color"></i>
+           <i class="fab fa-python color" ></i>
          </li>
          <li class="list-inline-item">
-           <i class="fab fa-r-project" id="color"></i>
+           <i class="fab fa-r-project color" ></i>
          </li>
          <li class="list-inline-item">
-           <i class="fab fa-bootstrap" id="color"></i>
+           <i class="fab fa-bootstrap color" ></i>
          </li>
          <li class="list-inline-item">
 
-         <i class="fab fa-css3" id="color"></i>
+         <i class="fab fa-css3 color"></i>
        </li>
          <li class="list-inline-item">
 
-       <i class="fab fa-js-square" id="color"></i>
+       <i class="fab fa-js-square color"></i>
      </li>
        </ul>
      </div>
     </div>
   </div>
-</div>
+
  
 <div class="card-footer text-muted text-center">
     Site made by Yinier Ramirez © 2020 Built using Bootstrap.
