--- a/courses.html
+++ b/courses.html
@@ -42,7 +42,7 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.png" alt="" class="logo">
+          <img src="images/logof.png" alt="logo" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
