--- a/hobbies.html
+++ b/hobbies.html
@@ -67,7 +67,7 @@
     <div class="col-md-6">
       <h3 class="text-center" >
         Swimming
-      </h3><img alt="Bootstrap Image Preview" src="images/nadar.png" class="zoom"/>
+      </h3><img alt="Swimming" src="images/nadar.png" class="zoom"/>
       <p class="lead" >
         One of the biggest benefits of swimming is that it truly works your entire body, head to toe. Swimming:
 
@@ -78,7 +78,7 @@ There are various strokes you can use to add variety to your swimming workout, i
     <div class="col-md-6" >
       <h3 class="text-center" >
         Volunteering
-      </h3><img alt="Bootstrap Image Preview" src="images/vol.png" class="zoom" />
+      </h3><img alt="Volunteering" src="images/vol.png" class="zoom" />
       <p class="lead" >
         Volunteering helps you make new friends and contacts
 Volunteering also strengthens your ties to the community and broadens your support network, exposing you to people with common interests, neighborhood resources, and fun and fulfilling activities.
@@ -89,7 +89,7 @@ Volunteering also strengthens your ties to the community and broadens your suppo
     <div class="col-md-6">
       <h3 class="text-center">
         Traveling
-      </h3><img alt="Bootstrap Image Preview" src="images/travel.png" class="zoom"/>
+      </h3><img alt="Traveling" src="images/travel.png" class="zoom"/>
       <p class="lead" >
         Culture often refers to the characteristics that are formed through language, history, geography,and family values. Learning about culture is enriching for the mind and soul. It can reinforce the whole experience and offer totally different perspectives. Discovering a new culture is learning something new which can be an exciting and thrilling experience that one cannot forget.
       </p>
@@ -97,7 +97,7 @@ Volunteering also strengthens your ties to the community and broadens your suppo
     <div class="col-md-6">
       <h3 class="text-center">
         Ride on bicycle
-      </h3><img alt="Bootstrap Image Preview" src="images/bici.png" class="zoom"/>
+      </h3><img alt="Ride on bicycle" src="images/bici.png" class="zoom"/>
       <p class="lead" >
         Cycling is mainly an aerobic activity, which means that your heart, blood vessels and lungs all get a workout. You will breathe deeper, perspire and experience increased body temperature, which will improve your overall fitness level.
       </p>
