--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             </button>
         </div>
         <a class="navbar-brand" href="#">
-          <img src="images/logof.png" alt="" class="logo">
+          <img src="images/logof.png" alt="logo" class="logo">
         </a>
         <span class="w-100"></span>
     </div>
     <span class="w-100"></span>
 </nav>
-<br></br>
+<br>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4" >
-      <img src="images/me.png" class="rounded-circle"  alt="Me" >
+      <img src="images/me.png" class="rounded-circle"  alt="Yinier" >
     </div>
     <div class="col-md-8">
       <div class="jumbotron">
@@ -85,7 +85,7 @@ More detailed information of the university, faculty, and bachelor degree below.
 
       <div class="row">
         <div class="col-md-4">
-          <div  class="card text-center" class="card text-center">
+          <div  class="card text-center">
             <img src="images/un.png" class="card-img-top" alt="UNAL" >
             <div class="card-block">
               <h5 class="card-title" >
@@ -98,14 +98,14 @@ More detailed information of the university, faculty, and bachelor degree below.
                    
               </p>
               <p>
-                <a target="_blank" href="https://unal.edu.co/en.html" class="btn btn-primary" href="#">More</a> 
+                <a target="_blank" href="https://unal.edu.co/en.html" class="btn btn-primary" >More</a> 
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div  class="card text-center" >
-            <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="images/fac.png" >
+            <img class="card-img-top" alt="Faculty" src="images/fac.png" >
             <div class="card-block">
               <h5 class="card-title" >
                 The Faculty
@@ -123,7 +123,7 @@ The Faculty of Mines is an institution that is mainly taught in engineering educ
         </div>
         <div class="col-md-4">
           <div  class="card text-center">
-            <img class="card-img-top" alt="Bootstrap Thumbnail Third" src="images/ing.png">
+            <img class="card-img-top" alt="Systems Engineering" src="images/ing.png">
             <div class="card-block">
               <h5 class="card-title">
                 The Bachelor Degree
