--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="d-flex w-100 order-0">
         <div class="w-100">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
