--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ More detailed information of the university, faculty, and bachelor degree below.
                    
               </p>
               <p>
-                <a  href="https://unal.edu.co/en.html" class="button" target="_blank" aria-label="university link">More</a> 
+                <a  href="https://unal.edu.co/en.html" class="btn btn-primary" target="_blank" aria-label="university link">More</a> 
               </p>
             </div>
           </div>
@@ -116,7 +116,7 @@ More detailed information of the university, faculty, and bachelor degree below.
 The Faculty of Mines is an institution that is mainly taught in engineering education in twelve of its branches, standing out for being the faculty with the highest amount of undergraduate engineering programs in Colombia, in addition to being considered the most prestigious in the country.
               </p>
               <p>
-                <a class="button" target="_blank" aria-label="faculty link" href="https://minas.medellin.unal.edu.co/#">More </a> 
+                <a class="btn btn-primary" target="_blank" aria-label="faculty link" href="https://minas.medellin.unal.edu.co/#">More </a> 
               </p>
             </div>
           </div>
@@ -132,7 +132,7 @@ The Faculty of Mines is an institution that is mainly taught in engineering educ
                 The curricular program of Systems Engineering and Informatics aims to train complete and qualified professionals who can adopt, apply and innovate knowledge in the field of systems and informatics. Computer science is applied in several and diverse sectors, and nowadays, computers are present in almost all daily tasks.
               </p>
               <p>
-                <a class="button" target="_blank" aria-label="bachelor link" href="https://minas.medellin.unal.edu.co/formacion/pregrado/ingenieriadesistemas">More</a>
+                <a class="btn btn-primary" target="_blank" aria-label="bachelor link" href="https://minas.medellin.unal.edu.co/formacion/pregrado/ingenieriadesistemas">More</a>
               </p>
             </div>
           </div>
