--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </div>
     <div class="d-flex w-100 order-0">
         <div class="w-100">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
@@ -79,18 +79,18 @@
       <ul class="list-inline dev-icons" >
         
          <li class="list-inline-item">
-          <a href="https://www.facebook.m/YinierRamirez/" target="_blank">
+          <a href="https://www.facebook.m/YinierRamirez/" target="_blank" aria-label="facebook link">
            <i class="fab fa-facebook" ></i>
            </a>
          </li>
           <li class="list-inline-item">
-          <a href="https://www.instagram.com/yinierr/" target="_blank">
+          <a href="https://www.instagram.com/yinierr/" target="_blank" aria-label="instagram link">
            <i class="fab fa-instagram" ></i>
            </a>
          </li>
 
         <li class="list-inline-item">
-          <a href="mailto:yiaramirezba@unal.edu.co" target="_blank">
+          <a href="mailto:yiaramirezba@unal.edu.co" target="_blank" aria-label="mailto link">
            <i class="far fa-envelope-open"  ></i>
            </a>
          </li>
