--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Yinier</title>
   </head>
-  <link  rel="shortcut icon"   href="images/icon.png" type="image/png" />
+  <link  rel="shortcut icon"   href="images/icon.ico" type="image/x-icon" />
     <body>
 
 
