--- a/courses.html
+++ b/courses.html
@@ -59,7 +59,7 @@
         The educational curriculum of the university is very varied and we have classes in mathematics, statistics, programming, research, engineering projects, AI, etc.
         </p>
       <p>
-        <a class="colorlink"  target="_blank"  href="https://minas.medellin.unal.edu.co/descargas/MallaCurricularIngenieriadeSistemaseInf2019.pdf" id="link">View details of the Curriculum  »</a>
+        <a class="colorlink"  target="_blank"  href="https://minas.medellin.unal.edu.co/formacion/pregrado/ingenieriadesistemas" id="link">View details of the Curriculum  »</a>
 
       </p>
       <p>
@@ -167,7 +167,29 @@ Basics of Excel           </td>
               National University of Colombia, Faculty of Human and Economic Sciences
             </td>
 
-          </tr>                             
+          </tr>
+          <tr class="table-success">
+            <td>
+              8
+            </td>
+            <td>
+Programming Fundamentals           </td>
+            <td>
+              DUKE University
+            </td>
+
+          </tr>
+          <tr class="table-success">
+            <td>
+              9
+            </td>
+            <td>
+LEARN-A-THON COLOMBIA           </td>
+            <td>
+              CISCO Networking Academy
+            </td>
+
+          </tr>          
         </tbody>
       </table>
     </div>
